--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,9 @@ edition = "2018"
 clap = { version = "2", features = ["yaml"] }
 globwalk = "*"
 walkdir = "2"
+jwalk = "*"
+rayon = "*"
+crossbeam  = "*"
+threadpool = "*"
+ring = "*"
+embed-resource = "*"
