--- a/dupe_args.yml
+++ b/dupe_args.yml
@@ -15,7 +15,7 @@ args:
       required: true
 
   - size:
-      help: How large do files have to be to check? (default > 250M)
+      help: How large do files have to be to check in bytes? (default > 250000 [250MB])
       short: s
       long: size
       multiple: false
