--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "dupe_finder"
-version = "0.1.0"
+name = "DuFF"
+version = "0.5.0"
 authors = ["Mike Lape <MikeLape@Gmail.com>"]
-description = "An application to find duplicate files on a filesystem. \n [Report bugs at https://github.com/bioinformike/dupe_finder/issues]"
-repository = "https://github.com/bioinformike/dupe_finder"
+description = "DuFF [Duplicate File Finder]\nAn application to find duplicate files on a filesystem. \n [Report bugs at https://github.com/bioinformike/DuFF/issues]"
+repository = "https://github.com/bioinformike/DuFF"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
