In the middle of switching out size option for ll and ul.

--- a/duff_args.yml
+++ b/duff_args.yml
@@ -22,6 +22,20 @@ args:
       multiple: false
       takes_value: true
 
+  - lower_lim:
+      help: Minimum size files must be to examine [bytes
+      short: ll
+      long: lowlim
+      multiple: false
+      takes_value: true
+
+  - upper_lim:
+      help: Maximum size files can be before we no longer examine them [bytes].
+      short: ul
+      long: uplim
+      multiple: false
+      takes_value: true
+
   - work_dir:
       help: Where script should store intermediate data (default is cwd)
       short: f
