Implemented parallel hashing!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,6 @@ chrono = "*"
 textwrap = "*"
 pretty-bytes = "0.2.2"
 twox-hash= "*"
-xxhash-rust = "*"
+itertools = "*"
+rayon = "*"
+byte-unit = "*"
