--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ twox-hash= "*"
 itertools = "*"
 rayon = "*"
 byte-unit = "*"
-
+indicatif = {version = "*", features = ["rayon"]}
+console = "*"
 [dev-dependencies]
 assert_cmd = "0.10"
 predicates = "1"
