Ripping out ignore and trying to get this file traversal working.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "2", features = ["yaml", "wrap_help"] }
 
 walkdir = "2"
 crossbeam  = "*"
+crossbeam-deque = "*"
 ignore = "*"
 ring = "*"
 chrono = "*"
