--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ crossbeam-channel = "^0"
 
 # Miscellaneous
 clap = { version = "^2", features = ["yaml", "wrap_help"] }
-chrono = "^0"
+chrono = {version = "^0", features = ['serde'] }
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
 
 # I/O and Progress
 indicatif = {version = "^0", features = ["rayon"]}
